<resources>
    <string name="app_name">My magazun</string>
    <string name="name">Введіть логін</string>
    <string name="password">Введіть пароль</string>
    <string name="email">Введіть email</string>
    <string name="create_account">Створіть акаунт</string>
    <string name="btn_login">Створити акаунт</string>
    <string name="authenticate">Вхід у акаунт</string>
    <string name="btn_authenticate">Увійти</string>
    <string name="home_title">Товари</string>
    <string name="item_list_button">Переглянути</string>
    <string name="btn_buy">Купити</string>
</resources>