<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_grey"
    tools:context=".AuthActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/authenticate"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/title"
        />

    <EditText
        android:id="@+id/login_user_auth"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:textColor="@color/dark_grey"
        android:textColorHint="@color/grey_hint"
        android:layout_gravity="center"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/login_password_auth"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:textColor="@color/dark_grey"
        android:textColorHint="@color/grey_hint"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_authenticate"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:backgroundTint="@color/orange"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/inter_bold"
        android:id="@+id/btn_login_auth" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/inter"
        android:text="@string/btn_login"
        android:textColor="@color/blue"
        android:textSize="17sp"
        android:id="@+id/link_to_reg"
        android:textStyle="bold"/>

</LinearLayout>